:wrench: Spacing fixed

--- a/css/global/general.css
+++ b/css/global/general.css
@@ -1,3 +1,6 @@
+body {
+  height: 5000px;
+}
 /* CSS Reset */
 * {
   margin: 0;
