--- a/css/home/intro.css
+++ b/css/home/intro.css
@@ -1,7 +1,6 @@
 .intro-bg {
   background-color: var(--c12);
   box-shadow: inset 0 -120px var(--c0);
-  margin-bottom: 120px;
   position: relative;
 }
 .intro-bg::after {
@@ -34,9 +33,6 @@
   object-fit: cover;
 }
 @media (max-width: 1200px) {
-  .intro-bg {
-    margin-bottom: 80px;
-  }
   .intro-bg::after {
     left: 20px;
   }
@@ -50,7 +46,6 @@
 @media (max-width: 1000px) {
   .intro-bg {
     box-shadow: inset 0 -80px var(--c0);
-    margin-bottom: 60px;
   }
   .intro-bg::after {
     display: none;
@@ -58,10 +53,11 @@
 }
 @media (max-width: 800px) {
   .intro-bg {
+    background-color: var(--c11);
     box-shadow: inset 0 -40px var(--c0);
-    margin-bottom: 40px;
   }
   .intro {
+    padding-top: 20px;
     grid-template-columns: 1fr;
   }
   .intro img {
